--- a/package.json
+++ b/package.json
@@ -8,12 +8,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^0.1.1",
+    "chalk": "^4.1.2",
+    "cheerio": "^1.0.0-rc.10",
+    "clsx": "^1.1.1",
+    "date-fns": "^2.25.0",
+    "isomorphic-fetch": "^3.0.0",
     "next": "12.0.4",
+    "next-auth": "^3.29.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
+    "@types/isomorphic-fetch": "^0.0.35",
+    "@types/react": "^17.0.35",
+    "@types/spotify-web-api-node": "^5.0.4",
+    "@types/spotify-web-playback-sdk": "^0.1.12",
+    "autoprefixer": "^10.4.0",
     "eslint": "7",
-    "eslint-config-next": "12.0.4"
+    "eslint-config-next": "12.0.4",
+    "postcss": "^8.3.11",
+    "tailwindcss": "^2.2.19",
+    "typescript": "^4.4.4"
   }
 }
