--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^0.1.1",
+    "@radix-ui/react-id": "^0.1.1",
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0-rc.10",
     "clsx": "^1.1.1",
