--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-auth": "^3.29.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-query": "^3.33.1",
     "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
@@ -29,10 +30,13 @@
     "@types/spotify-web-api-node": "^5.0.4",
     "@types/spotify-web-playback-sdk": "^0.1.12",
     "autoprefixer": "^10.4.0",
+    "dotenv": "^10.0.0",
+    "esbuild": "^0.13.14",
+    "esbuild-register": "^3.1.2",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
     "postcss": "^8.3.11",
     "tailwindcss": "^2.2.19",
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.0"
   }
 }
