--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-id": "^0.1.1",
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0-rc.10",
+    "chunk-promise": "^1.2.1",
     "clsx": "^1.1.1",
     "date-fns": "^2.25.0",
     "isomorphic-fetch": "^3.0.0",
