--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "date-fns": "^2.25.0",
     "isomorphic-fetch": "^3.0.0",
     "next": "12.0.4",
-    "next-auth": "^3.29.0",
+    "next-auth": "4.0.0-beta.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.33.1",
