--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.33.1",
-    "spotify-web-api-node": "^5.0.2"
+    "spotify-web-api-node": "^5.0.2",
+    "use-debounce": "^7.0.1"
   },
   "devDependencies": {
     "@next-auth/prisma-adapter": "^0.5.2-next.19",
