--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "cheerio": "^1.0.0-rc.10",
     "chunk-promise": "^1.2.1",
     "clsx": "^1.1.1",
+    "contrast": "^1.0.1",
     "date-fns": "^2.25.0",
+    "fast-average-color": "^7.0.1",
     "isomorphic-fetch": "^3.0.0",
     "next": "12.0.4",
     "next-auth": "4.0.0-beta.7",
