--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-checkbox": "^0.1.1",
     "@radix-ui/react-collapsible": "^0.1.1",
     "@radix-ui/react-dialog": "^0.1.1",
+    "@radix-ui/react-dismissable-layer": "^0.1.1",
     "@radix-ui/react-dropdown-menu": "^0.1.1",
     "@radix-ui/react-icons": "^1.0.3",
     "@radix-ui/react-id": "^0.1.1",
