--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@radix-ui/react-dialog": "^0.1.1",
     "@radix-ui/react-dismissable-layer": "^0.1.1",
     "@radix-ui/react-dropdown-menu": "^0.1.1",
-    "@radix-ui/react-icons": "^1.0.3",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-id": "^0.1.1",
     "@radix-ui/react-slider": "^0.1.1",
     "@radix-ui/react-switch": "^0.1.1",
@@ -32,7 +32,9 @@
     "fast-average-color": "^7.0.1",
     "isomorphic-fetch": "^3.0.0",
     "next": "12.1.6",
-    "next-auth": "4.3.4",
+    "next-auth": "4.24.7",
+    "p-queue": "7",
+    "p-retry": "5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.33.1",
@@ -54,6 +56,7 @@
     "eslint": "7",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.3.11",
+    "prisma": "3",
     "tailwindcss": "^2.2.19",
     "typescript": "^4.5.0"
   }
