--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "postinstall": "npx prisma generate && yarn pull-data"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.1.3",
     "@design-systems/hooks": "^4.13.1",
-    "@prisma/client": "^3.5.0",
+    "@prisma/client": "^5.14.0",
     "@radix-ui/react-checkbox": "^0.1.1",
     "@radix-ui/react-collapsible": "^0.1.1",
     "@radix-ui/react-dialog": "^0.1.1",
@@ -26,24 +27,27 @@
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0-rc.10",
     "chunk-promise": "^1.2.1",
-    "clsx": "^1.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "contrast": "^1.0.1",
     "date-fns": "^2.25.0",
     "fast-average-color": "^7.0.1",
+    "framer-motion": "^11.2.10",
     "isomorphic-fetch": "^3.0.0",
-    "next": "12.1.6",
-    "next-auth": "4.24.7",
+    "lucide-react": "^0.381.0",
+    "next": "^14.2.3",
     "p-queue": "7",
     "p-retry": "5",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-query": "^3.33.1",
     "spotify-web-api-node": "^5.0.2",
     "string-similarity": "^4.0.4",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^7.0.1"
   },
   "devDependencies": {
-    "@next-auth/prisma-adapter": "^1.0.3",
     "@types/isomorphic-fetch": "^0.0.35",
     "@types/react": "^17.0.35",
     "@types/spotify-web-api-node": "^5.0.4",
@@ -56,8 +60,8 @@
     "eslint": "7",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.3.11",
-    "prisma": "3",
-    "tailwindcss": "^2.2.19",
+    "prisma": "^5.14.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "^4.5.0"
   }
 }
