--- a/package.json
+++ b/package.json
@@ -57,11 +57,11 @@
     "dotenv": "^10.0.0",
     "esbuild": "^0.13.14",
     "esbuild-register": "^3.1.2",
-    "eslint": "7",
-    "eslint-config-next": "12.1.6",
+    "eslint": "^8",
+    "eslint-config-next": "^14.2.3",
     "postcss": "^8.3.11",
     "prisma": "^5.14.0",
     "tailwindcss": "^3.4.3",
-    "typescript": "^4.5.0"
+    "typescript": "^5.4.5"
   }
 }
